--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.7.2"
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-po2mo": "~0.1.0",
+    "grunt-checktextdomain": "~0.1.1",
+    "grunt-wp-i18n": "~0.4.9"
   }
 }
